--- a/css/style-old.css
+++ b/css/style-old.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
 }
 .maintainance-container {
-  background-image: url("https://raw.githubusercontent.com/MaveraDSS/mavera-failover-site/blob/774c879a3d8076dddcc9df5bcf569aaf2ac435bd/assets/img/maintainance.png");
+  background-image: url("../img/maintainance.png");
   width: 100%;
   background-size: cover;
   position: relative;
