--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
 .maintainance-container img {
   padding: 0.75rem;
 }
-
+/* 
 .maintainance-container .main {
     padding: 42px;
 }
@@ -66,4 +66,4 @@ body {
 .maintainance-container .sorry,
 .maintainance-container .header .error-description {
     display: none;
-}
+} */
